# SlintTest

./: .gitignore  CMakeLists.txt  README.md  cmake-gen-and-install.cmd
emptyExecutable/: CMakeLists.txt  main.cpp  mainwindow.slint
executable/: CMakeLists.txt  benchmark.cpp  benchmark.h  entry.slint  main.cpp  mainwindow.slint
